[package]
name = "xler_native"
version = "0.2.0"
authors = []
edition = "2018"

[lib]
name = "xler_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.0", default-features = false, features = ["derive"] }
lazy_static = "1.5"
calamine = "0.30.1"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]